updated project monitor

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,12 +5,7 @@ description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
-# The `_lib` suffix may seem redundant but it is necessary
-# to make the lib name unique and wouldn't conflict with the bin name.
-# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
 name = "projectguard_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
@@ -18,8 +13,9 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+rusqlite = { version = "0.31.0", features = ["bundled"] }
+tauri = { version = "2", features = [] }  # Removed dialog-all feature
+tauri-plugin-dialog = "2" # Dialog plugin provides dialog functionality
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
